--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ html {
 .container main .voting-state {
   width: 100%;
   height: 100%;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
@@ -76,7 +76,7 @@ html {
   justify-content: space-between;
   align-items: center;
 }
-.container main .voting-state .rate-wrapper span {
+.container main .voting-state .rate-wrapper button {
   width: 40px;
   height: 40px;
   background-color: var(--Dark-Blue);
@@ -89,12 +89,12 @@ html {
   color: var(--Medium-Grey);
   font-size: 13px;
 }
-.container main .voting-state .rate-wrapper span.active {
+.container main .voting-state .rate-wrapper button.active {
   background-color: var(--Light-Grey);
   color: var(--White);
   font-size: 14px;
 }
-.container main .voting-state .rate-wrapper span:hover {
+.container main .voting-state .rate-wrapper button:hover {
   background-color: var(--Orange);
   color: var(--White);
 }
@@ -119,7 +119,7 @@ html {
   width: 100%;
   height: 100%;
   padding: 30px 0;
-  display: flex;
+  display: none;
   flex-direction: column;
   gap: 30px;
 }
@@ -130,7 +130,7 @@ html {
   justify-content: center;
   align-items: center;
 }
-.container main .thank-you-state .choese-message {
+.container main .thank-you-state .choose-message {
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
@@ -138,7 +138,7 @@ html {
   align-items: center;
   justify-content: center;
 }
-.container main .thank-you-state .choese-message p {
+.container main .thank-you-state .choose-message p {
   padding: 5px 12px;
   border-radius: 12px;
   background-color: var(--Dark-Blue);
